Correcting margins on buttons in about cards on smaller screens

--- a/assets/css/3-pages/_frontpage.scss
+++ b/assets/css/3-pages/_frontpage.scss
@@ -28,6 +28,12 @@ section#about {
         margin-top: 25px;
       }
     }
+    .button {
+      margin: 0 5px;
+      @media (max-width: 360px) {
+        margin: 10px 0;
+      }
+    }
   }
 }
 
